# SyncRow_Portal

./: .gitignore  README.md  analyze_async.py  app.py  async_analysis_results.csv  ee_deltav_data.csv  ee_scatter_data.csv  pyproject.toml  start.sh
.claude/: settings.local.json
deploy/: CREDENTIALS.md  DEPLOY.md  bootstrap.sh  credentials.example.json  deploy-from-laptop.sh  deploy.sh  nginx-syncrow.conf  portal.env.example  syncrow-portal.service
docs/: architecture.md  data_model.md  development.md
srow/: __init__.py
srow/components/: __init__.py  data_table.py  map_view.py  sidebar.py  time_series.py
srow/config/: __init__.py  env_utils.py  settings.py
srow/services/: __init__.py  cache_service.py  influx_service.py  location_service.py
srow/state/: __init__.py  app_state.py
srow/utils/: __init__.py  angle_utils.py  time_utils.py
tests/: __init__.py  conftest.py  test_angle_utils.py  test_cache_service.py  test_components.py  test_influx_service.py  test_location_service.py  test_settings.py
web/: charts.py  main.py
web/templates/: base.html  chart.html  index.html  login.html
